# pkgpartial

./: main.c  meson.build
